# raytracer

./: AABBNode.h  CMakeLists.txt  Color.h  Film.h  Intersection.h  Light.h  ObjParser.h  Primitive.h  README.md  Ray.h  Scene.h  Shape.h  Transformation.h  main.cpp
tests/: avent.txt  objTeapot.txt  scene13.txt  scene14.txt  testTransform.txt
